<resources>
    <string name="app_name">PrepodSearch</string>

    <string-array name="daysOfTheWeek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string name="shortMonday">ПН</string>
    <string name="shortTuesday">ВТ</string>
    <string name="shortWednesday">СР</string>
    <string name="shortThursday">ЧТ</string>
    <string name="shortFriday">ПТ</string>
    <string name="shortSaturday">СБ</string>

    <integer name="com_vk_sdk_AppId">7985437</integer>

    <!-- HardCodedValues -->
    <string name="searchButtonText">Поиск</string>
    <string name="teacherText">Преподаватель</string>
    <string name="emptySpace">emptySpace</string>
    <string name="okButtonText">ОК</string>
    <string name="takeAnotherDay">Выбрать другой день недели</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="teacherNameHint">Фамилия преподавателя</string>
    <string name="teachersMenuText">Преподаватели</string>
    <string name="scheduleMenuText">Расписание</string>
    <string name="newsMenuText">Новости</string>
    <string name="ratingMenuText">Рейтинг</string>
    <string name="takeOtherTeacher">Выбрать другого преподавателя</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groupNumberHint">Номер группы</string>
    <string name="underGroupText">Подгруппа</string>
    <string name="groupText">Группа</string>
    <string name="underGroupHint">1</string>
</resources>